--- a/index.html
+++ b/index.html
@@ -11,11 +11,33 @@
     <div class="header-img">
         <h2>Let,s Help Those Who Are More In Need</h2>
         <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
-        <div class="button">
+        <div id="button">
             <button class="primary-btn">Donate Now</button>
         </div>
 
-    </div>          
+    </div>      
+    <section>
+        <div class="Donate-today">
+            <h2 class="Donate-title">Donate Today</h2>
+            <p class="donate-discription">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+                deterruisset. No duo populo animal noluisse, enim</p>
+
+        </div>
+        <div class="taka">
+            <h4>100tk</h4>
+            <h4 id="tk">200tk</h4> 
+            <h4>500tk</h4>
+            <h4>1000tk</h4>
+            <h4>5000tk</h4>
+        </div>
+        <div class="ammount">
+            <p>Other Ammount (Taka)</p>
+            <hr>
+            <button class="primary-btn">Donate Now</button>
+        </div>
+        
+
+    </section>    
     
 </body>
 </html>
