--- a/index.html
+++ b/index.html
@@ -39,21 +39,30 @@
             <h2 class="title">Our Donate Plan</h2>
             <p class="discription">Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
                 deterruisset. No duo populo animal noluisse, enim</p>  
-            <div class="plans-bar">
-                <img src="donate-today-main/icons/food.png" alt="">
-                <h4 class="food-title">Food for a family</h4>
-                <p class="food-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet 
-                    sint. Velit officia consequat duis enim 
-                    velit mollit</p>
-                    <div class="plans-bar">
-                        <img src="donate-today-main/icons/shelter.png" alt="">
-                            <h4 class="shelter-title">Shelter for a family</h4>
-                                <p class="shelter-discription">Amet minim mollit non deserunt 
-                                    ullamco est sit aliqua dolor do amet 
-                                    sint. Velit officia consequat duis enim 
-                                    velit mollit.</p>
-                        </img>
+                <div class="plans-container">
+                    <div class="plans-bar-1">
+                        <img src="donate-today-main/icons/food.png" alt="">
+                        <h4 class="plans-title">Food for a family</h4>
+                        <p class="plans-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet 
+                            sint. Velit officia consequat duis enim 
+                            velit mollit</p>
                     </div>
+                            <div class="plans-bar-2">
+                                <img src="donate-today-main/icons/shelter.png" alt=""></img>
+                                    <h4 class="plans-title">Shelter for a family</h4>
+                                        <p class="plans-discription">Amet minim mollit non deserunt 
+                                            ullamco est sit aliqua dolor do amet 
+                                            sint. Velit officia consequat duis enim 
+                                            velit mollit.</p>
+                                            </div>
+                                  <div class="plans-bar-3">
+                                    <img src="donate-today-main/icons/Frame-1.png" alt="">
+                                        <h4 class="plans-title">Education for a child</h4>
+                                        <p class="plans-discription">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                                    </img>
+                                  </div> 
+                                         
+                </div>
             
 
                 </section>
